--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,8 @@ nest-asyncio==1.6.0
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.19.0
-openai==1.41.0
+# openai==1.41.0
+openai>=1.6.1,<2.0.0
 opentelemetry-api==1.26.0
 opentelemetry-exporter-otlp-proto-common==1.26.0
 opentelemetry-exporter-otlp-proto-grpc==1.26.0
