--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ OPENAI_API_KEY=xx
 AWS_ACCESS_KEY_ID=xx
 AWS_SECRET_ACCESS_KEY=xx
 AWS_REGION_NAME=xx
-GPT_MODEL=gpt-3.5-turbo
+GPT_MODEL=gpt-4o-mini
 HUGGGINGFACE_API_KEY=xx
 
 #Agent setup
