--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ HUGGGINGFACE_API_KEY=xx
 #Agent setup
 USE_TOOLS_IN_API=True
 CONFIG_PATH=examples/example_agent_setup.json
-PRODUCT_CATALOG=examples/sample_product_catalog.txt
+PRODUCT_CATALOG=examples/sample_product_catalog.json
 PRODUCT_PRICE_MAPPING=examples/example_product_price_id_mapping.json
 
 #Gmail API config for sending emails
