--- a/.gitignore
+++ b/.gitignore
@@ -135,7 +135,7 @@ website/docs/.env
 
 
 Product_API/product_details.txt
-examples\sample_product_catalog.txt
+examples/sample_product_catalog.txt
 
 # Spyder project settings
 .spyderproject
