--- a/Chrome_Extension/manifest.json
+++ b/Chrome_Extension/manifest.json
@@ -12,7 +12,7 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_title": "Speech to Text",
+    "default_title": "Flippi Text Assistant",
     "default_icon": {
       "16": "data/icons/16.png",
       "32": "data/icons/32.png",
